--- a/app/src/main/resources/static/index.html
+++ b/app/src/main/resources/static/index.html
@@ -21,7 +21,7 @@
             <p>Now, it's time for some interactivity.</p>
         </div>
 
-        <form>
+        <form autocomplete="off">
             <input id="name" type="text" placeholder="What's your name?" required autofocus/>
             <button id="send" type="button">Send</button>
         </form>
