--- a/app/src/main/resources/static/index.html
+++ b/app/src/main/resources/static/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/normalize.css@8.0.0/normalize.css">
     <link rel="stylesheet" href="styles.css">
+    <script type="text/javascript" src="api.js"></script>
     <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
